--- a/Project_3_AB_testing_Product_metrics/a_ershov_final_project_variant_2.ipynb
+++ b/Project_3_AB_testing_Product_metrics/a_ershov_final_project_variant_2.ipynb
@@ -67,9 +67,7 @@
     "Образовательная платформа предлагает пройти студентам курсы по модели trial: студент может решить бесплатно лишь 30 горошин в день. Для неограниченного количества заданий в определенной дисциплине студенту необходимо приобрести полный доступ. Команда провела эксперимент, где был протестирован новый экран оплаты.\n",
     "\n",
     "**2.2.2 Задача**\n",
-    "\n",
-    "Дана таблицы: **peas** (см. выше), **studs**:\n",
-    "\n",
+    "Дана таблицы: **peas**, **studs**:\n",
     "| **Название атрибута**  | **Тип атрибута**   | **Смысловое значение**               |\n",
     "|------------------------|--------------------|--------------------------------------|\n",
     "| st_id                  | int                | ID ученика                           |\n",
