--- a/Project_3_AB_testing_Product_metrics/Jnote_AB_testing_Product_metrics.ipynb
+++ b/Project_3_AB_testing_Product_metrics/Jnote_AB_testing_Product_metrics.ipynb
@@ -51,12 +51,14 @@
     "**2.1.2 Задача**\n",
     "Дана таблица **peas**:\n",
     "\n",
+    "\n",
     "| **Название атрибута**  | **Тип атрибута**  | **Смысловое значение**                    |\n",
     "|:-----------------------|:------------------|:------------------------------------------|\n",
     "| st_id                  | int               | ID ученика                                |\n",
     "| timest                 | timestamp         | Время решения карточки                    |\n",
     "| correct                | bool              | Правильно ли решена горошина?             |\n",
     "| subject                | text              | Дисциплина, в которой находится горошина  |\n",
+    "\n",
     "\n",
     "Необходимо написать **оптимальный запрос**, который даст информацию о количестве очень усердных студентов за март 2020 года.  \n",
     "_  \n",
@@ -70,19 +72,23 @@
     "**2.2.2 Задача**\n",
     "Дана таблицы: **peas**, **studs**:\n",
     "\n",
+    "\n",
     "| **Название атрибута**  | **Тип атрибута**   | **Смысловое значение**               |\n",
     "|:-----------------------|:-------------------|:-------------------------------------|\n",
     "| st_id                  | int                | ID ученика                           |\n",
     "| test_grp               | text               | Метка ученика в данном эксперименте  |\n",
     "\n",
+    "\n",
     "и **final_project_checks**:\n",
     "\n",
-    "| **Название атрибута**  | **Тип атрибута**  | **Смысловое значение**                          |\n",
-    "|:-----------------------|:------------------|:------------------------------------------------|\n",
-    "| st_id                  | int               | ID ученика                                      |\n",
-    "| sale_time              | timestamp         | Время покупки                                   |\n",
-    "| money                  | int               | Цена, по которой приобрели данный курс          |\n",
-    "| subject                | text              | Дисциплина, на которую приобрели полный доступ  |\n",
+    "\n",
+    "| **Название атрибута** | **Тип атрибута** | **Смысловое значение** |\n",
+    "|:----------------------|:-----------------|:-----------------------|\n",
+    "| st_id | int | ID ученика |\n",
+    "| sale_time | timestamp | Время покупки |\n",
+    "| money | int | Цена, по которой приобрели данный курс |\n",
+    "| subject | text | Дисциплина, на которую приобрели полный доступ \n",
+    "\n",
     "\n",
     "Необходимо выгрузить следующую информацию о группах пользователей:\n",
     "\n",
