--- a/Project_3_AB_testing_Product_metrics/Jnote_AB_testing_Product_metrics.ipynb
+++ b/Project_3_AB_testing_Product_metrics/Jnote_AB_testing_Product_metrics.ipynb
@@ -96,14 +96,7 @@
     "-   ARPAU \n",
     "-   CR в покупку \n",
     "-   СR активного пользователя в покупку \n",
-    "-   CR пользователя из активности по математике (subject = ’math’) в покупку курса по математике\n",
-    "\n",
-    "### Задание 3. Python\n",
-    "\n",
-    "**3.1 Задача**\n",
-    "\n",
-    "1.  Реализуйте функцию, которая будет автоматически подгружать информацию из дополнительного файла `groups_add.csv` (заголовки могут отличаться) и на основании дополнительных параметров пересчитывать метрики.\n",
-    "2.  Реализуйте функцию, которая будет строить графики по получаемым метрикам."
+    "-   CR пользователя из активности по математике (subject = ’math’) в покупку курса по математике"
    ]
   },
   {
